config/objects/Quote__c.object
<CustomObject>
    <fields>
        <fullName>Carrier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Carrier</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Carrier_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Consignee_Location_Scope__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consignee Location Scope</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipName>Consignee_Location_Scoped_Quoted</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Consignee_Pod_Scope__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consignee Pod Scope</label>
        <referenceTo>Pod__c</referenceTo>
        <relationshipName>Consignee_Pod_Scoped_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Consignee_State_Scope__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consignee State Scope</label>
        <referenceTo>State__c</referenceTo>
        <relationshipName>Consignee_State_Scoped_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Consignee_Zip_Five_Scope__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consignee Zip Five Scope</label>
        <referenceTo>ZipFive__c</referenceTo>
        <relationshipName>Consignee_Zip_Five_Scoped_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Consignee_Zip_Three_Scope__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consignee Zip Three Scope</label>
        <referenceTo>ZipThree__c</referenceTo>
        <relationshipName>Consignee_Zip_Three_Scoped_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Customer_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Editable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Parent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Parent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Tender_Copy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Tender Copy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Load_Scope__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Load Scope</label>
        <referenceTo>Load__c</referenceTo>
        <relationshipName>Load_Scoped_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Max_Min_Temp__c</fullName>
        <label>Max Min Temp</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_Lead_Time_Days__c</fullName>
        <label>Maximum Lead Time Days</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Max_Temp__c</fullName>
        <label>Min Max Temp</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Lead_Time_Days__c</fullName>
        <label>Minimum Lead Time Days</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mode</label>
        <referenceTo>Mode__c</referenceTo>
        <relationshipName>Rates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Quote</label>
        <referenceTo>Quote__c</referenceTo>
        <relationshipName>Child_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scope_Name__c</fullName>
        <formula>if (not(isnull(Load_Scope__c)),Load_Scope__r.Name &amp; &quot;(&quot; &amp; Load_Scope__r.First_Pick_Pod__r.Name &amp; &quot;)&quot;,&quot;&quot;)</formula>
        <label>Scope Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipper_Location_Scope__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipper Location Scope</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipName>Shipper_Location_Scoped_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipper_Pod_Scope__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipper Pod Scope</label>
        <referenceTo>Pod__c</referenceTo>
        <relationshipName>Shipper_Pod_Scoped_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipper_State_Scope__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipper State Scope</label>
        <referenceTo>State__c</referenceTo>
        <relationshipName>Shipper_State_Scoped_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipper_Zip_Five_Scope__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipper Zip Five Scope</label>
        <referenceTo>ZipFive__c</referenceTo>
        <relationshipName>Shipper_Zip_Five_Scoped_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipper_Zip_Three_Scope__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipper Zip Three Scope</label>
        <referenceTo>ZipThree__c</referenceTo>
        <relationshipName>Shipper_Zip_Three_Scoped_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tender_Copy_Of__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tender Copy Of</label>
        <referenceTo>Quote__c</referenceTo>
        <relationshipLabel>Quotes (Tender Copy Of)</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tender_Count__c</fullName>
        <label>Tender Count</label>
        <summaryForeignKey>Tender__c.Quote__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Quote</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Load_Scope__c</columns>
        <columns>Shipper_Location_Scope__c</columns>
        <columns>Shipper_Zip_Five_Scope__c</columns>
        <columns>Shipper_Zip_Three_Scope__c</columns>
        <columns>Shipper_Pod_Scope__c</columns>
        <columns>Shipper_State_Scope__c</columns>
        <columns>Consignee_Location_Scope__c</columns>
        <columns>Consignee_Zip_Five_Scope__c</columns>
        <columns>Consignee_Zip_Three_Scope__c</columns>
        <columns>Consignee_Pod_Scope__c</columns>
        <columns>Consignee_State_Scope__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Q-{0}</displayFormat>
        <label>Quote Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quotes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Carrier_Quotes_Requite_Quote_Sources</fullName>
        <active>true</active>
        <errorConditionFormula>and(isblank( Source__c ), Type__c = &apos;CARRIER&apos;)</errorConditionFormula>
        <errorMessage>Carrier quotes require a source reference to ensure accurate billing.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Non_Parent_Quotes_Need_Scopes</fullName>
        <active>true</active>
        <errorConditionFormula>and (Is_Parent__c &lt;&gt; true, or ( and ( isblank ( Shipper_Location_Scope__c ), isblank(Shipper_Zip_Five_Scope__c ) , isblank ( Shipper_Zip_Three_Scope__c ), isblank ( Shipper_Pod_Scope__c ), isblank(Shipper_State_Scope__c)), and ( isblank ( Consignee_Location_Scope__c ), isblank(Consignee_Zip_Five_Scope__c ) , isblank ( Consignee_Zip_Three_Scope__c ), isblank ( Consignee_Pod_Scope__c ), isblank(Consignee_State_Scope__c))))</errorConditionFormula>
        <errorMessage>Non-accessorial rates require shipper and consignee geographic scopes.</errorMessage>
    </validationRules>
</CustomObject>